Добавлена адаптивность страницы товаров

--- a/single.html
+++ b/single.html
@@ -307,6 +307,9 @@
         </aside>
     </div>
     <!-- /.page-content -->
+    <div class="alert">
+        Мы используем cookies
+    </div>
     <!-- js - https://swiperjs.com/ -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
